
-- Size of libnimble was massively reduced by avoiding generation of C++ debugging content.

-- improved error management from compileNimble

-- NaN is now handled correctly as a constant by compiler

-- Variable names with "." are now handled correctly by the compiler.

-- pi is now handled as a constant or variable in a nimbleFunction (but cannot be used as a constant in model code).

DEVELOPER LEVEL CHANGES

-- Improvements added to testing system, including safeguarding against silent failures, use of gold files, batching of compiler tests, more expected failures, conversion to running all tests using test_package, and parallelization on Travis-CI.

-- Names assigned to package-defined nimbleFunctions to improve C++ readability.

-- Use of R registrations for C functions was cleaned up.

-- Lots of vestigial code was cleaned up.

BUG FIXES

-- several bugs fixed in the automated factor slice sampler (AF_slice sampler), having to due with correctly resetting the internal member variables when an MCMC is run multiple times

-- fixed harmless bug in managing split vertex numbering.

-- Allow sum of length-zero vectors to compile correctly.

                           CHANGES IN VERSION 0.6-5 (June 2017)

USER LEVEL CHANGES

-- The functions returned from a call to buildMCEM() now include an estimateCov() method, which can be used to estimate the asymptotic covariance of model parameters at their MLE values.  

-- nimbleLists can now be used in nimbleFunctions that do not have setup code.

-- Enabled use of c(), rep(), seq(), diag() and ':' in BUGS code.

-- Added dflat and dhalfflat for improper uniform (prior) distributions on the real line and positive real line; includes conjugacies for dnorm dependents (in mean) with dflat distribution and dnorm dependents (in sd) with dhalfflat distribution.
