@@ -18,6 +18,8 @@ USER LEVEL CHANGES
 
 -- pi is now handled as a constant or variable in a nimbleFunction (but cannot be used as a constant in model code).
 
+-- returnESS() method added to the bootstrap filter and auxiliary particle filter.
+
 DEVELOPER LEVEL CHANGES
 
 -- Improvements added to testing system, including safeguarding against silent failures, use of gold files, batching of compiler tests, more expected failures, conversion to running all tests using test_package, and parallelization on Travis-CI.
